# DiffPump

./: .gitignore  README.md  pyproject.toml  ruff.toml
.github/workflows/: main.yml
data/tests/: dummy.mps
diffpump/: __init__.py  diff_pump.py  feas_pump.py  first_iteration.py  mps_loader.py  parse.py  utils.py
diffpump/losses/: __init__.py  base.py  cost.py  feasibility.py  regularization.py
diffpump/losses/integrality/: loss.py  minx1mx.py
diffpump/modules/: __init__.py  norm_proj.py  soft_rounding.py
diffpump/modules/argmin/: __init__.py  base.py  get_estimator.py  identity.py  perturbed.py
diffpump/restarts/: __init__.py  detect.py  flip.py  perturb.py
diffpump/solver/: __init__.py  solver.py
diffpump/solver/grb/: __init__.py  grbmodel.py  mip.py  mipsparse.py
script/: main.py
tests/: test_feas_pump.py
tests/integration/: test_grad_projection.py  test_norm_no_grad.py  test_pump.py
tests/test_losses/: test_cost_loss.py  test_feasibility_loss.py  test_integrality_loss.py  test_integrality_metric.py  test_regularization_loss.py
tests/test_modules/: test_normalization.py  test_rounding.py
tests/test_restarts/: test_cycle_detection.py  test_flip.py  test_perturb.py
tests/test_sparse/: test_feas_sparse_loss.py  test_mip_sparse.py
